--- a/LESS/index.less
+++ b/LESS/index.less
@@ -1,4 +1,5 @@
 /* This line is importing the font 'Roboto'. DO NOT change line 2*/
+@import '../Menu/Menu.less'; 
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
 
 /* Below this line is where you will start your work */
